--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
     {% else %}
     <h3 style="color:red; padding:30px;font-size:35px; font-weight:bold; font-family:'Courier New', Courier, monospace; text-transform: uppercase;">.Enter A Message To Check The Message is SPAM or NOT-SPAM..</h3>
     {% endif %}
-    <div class="head-git"><h2>For Source Code of this Project , Visit our GIT-HUB page <a href="https://github.com/R-Coder07/Current-Cloud_Wheather" class="nav__link">Github-Page</a></h2></div> 
+    <div class="head-git"></div> 
     <div class="head"><h2> Copyright &copy; Spam Detector 2021</h2></div> 
 </body>
 </html>
